--- a/css/firststyle.css
+++ b/css/firststyle.css
@@ -8,6 +8,7 @@ body{width: 100%;height: 100%;background:#fff;}
 /*main*/
 .main{background:#fff;}
 .main a{text-align: center;width:998px;height: 60px;line-height: 60px;font-size: 16px;border: 1px solid #9CCDD9;font-size: 20px;display: inline-block;border-top: 0;}
+.main a:hover{opacity: .8;background: #9ccdd9;}
 /*footer*/
 .footer{width:100%;height: 30px;position: absolute;bottom: 0;left: 0;background: #9ccdd9;}
 .footer p{height: 30px;line-height: 30px;text-align: center;}
