--- a/css/firststyle.css
+++ b/css/firststyle.css
@@ -4,6 +4,7 @@ body{width: 100%;height: 100%;background:#fff;}
 .fixedWidth{width:1000px;margin: 0 auto;}
 /*header*/
 .header h2{width:100%;height: 50px;line-height: 50px;position: fixed;top: 0;left: 0;text-indent:2em;background: #9ccdd9;}
+.header a{font-size: 14px;color: #FFF;}
 #topblank{width: 100%;height: 50px;}
 /*main*/
 .main{background:#fff;}
