--- a/Mall/css/homePageMain.css
+++ b/Mall/css/homePageMain.css
@@ -4,7 +4,7 @@
 .leftArea{float:left;}
 .rightArea{float:right;}
 
-
+/*最先是个商城静态网站,之后觉得只有菜单有内容，就只保留菜单作为一个组件*/
 
 body{background: #F5F5F5;}
 /*topBar*/
@@ -26,7 +26,8 @@ body{background: #F5F5F5;}
 .shopNum{width: 27px;height: 35px;border-left: #FF9C01 1px solid;background: url(../img/trig.jpg) 33px center no-repeat;text-align: right;padding-right: 29px;}
 
 /*导航栏*/
-.navbox{height:35px;background-color: #1369C0;}
+.wrap{width:1000px;margin:auto;}
+.navbox{width:100%;height:35px;background-color: #1369C0;}
 .shopMenu{width:189px;color: #FFF;position: relative;}
 .shopMenu h3{text-align: center;line-height: 35px;}
 .shopMenu .openIcon{background: url(../img/nav.jpg) left center no-repeat;display: inline-block;width: 11px;height:7px;overflow: hidden;margin-left: 11px;}
@@ -49,7 +50,7 @@ body{background: #F5F5F5;}
 .listWrap a:hover{color: red;}
 .listWrap .addList{display:inline-block;height:26px;line-height:26px;padding-left:8px;background:#2785E6;color:#FFF;margin-top: 15px;margin-bottom: 14px;}
 /*bannerBox*/
-.bannerBox{width: 811px;height: 326px;position: relative;overflow: hidden;clear: both;}
+.bannerBox{width: 811px;height: 326px;margin-left:189px;position: relative;overflow: hidden;clear: both;}
 .bannerImg{width: 5677px;heigh:326px;position: absolute;left:0;top:0;}
 .bannerImg li{float:left;}
 .bannerImg img{display:block;width: 811px;height: 326px;}
