--- a/create_order/main.css
+++ b/create_order/main.css
@@ -158,5 +158,5 @@ input:focus {
 	background: #81cd4e;
 }
 .created:active{  
-    box-shadow: inset 0 5px 10px #CCC,inset 0 -5px 10px #CCC;  
+    box-shadow: inset 0 5px 10px #FFF,inset 0 -5px 10px #FFF;  
 }
